added the heading

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>2nd Repo</title>
 </head>
 <body>
+    <h1>
+        THIS CODE IS GOING TO THE GITHUB
+    </h1>
     <div class="container">
         <p class="first">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae placeat inventore asperiores corrupti aliquid soluta facilis rem nobis, neque voluptatibus ratione, doloribus accusantium. Iste est similique ducimus expedita? Sunt ipsam nostrum deserunt voluptatem quidem, sed inventore eius? Eos ea, dolores quibusdam rem a exercitationem inventore libero, recusandae in corporis tenetur sit minima amet laudantium pariatur iusto?
