--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
         <p class="third">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae placeat inventore asperiores corrupti aliquid soluta facilis rem nobis, neque voluptatibus ratione, doloribus accusantium. Iste est similique ducimus expedita? Sunt ipsam nostrum deserunt voluptatem quidem, sed inventore eius? Eos ea, dolores quibusdam rem a exercitationem inventore libero, recusandae in corporis tenetur sit minima amet laudantium pariatur iusto?
         </p>
+        <h3>to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>
+                git commit -m"add a meaningful commit message"
+
+            </li>
+            <li>
+                git push
+            </li>
+        </ul>
     </div>
 </body>
 </html>
